# DigitGrep

./: .gitignore  DigitGrep.cabal  LICENSE  Mnist.cabal  README.md  mnist.cabal  network  notes.org  stack.yaml
app/: Test.hs  Train.hs
src/: LAUtils.hs  Linalg.hs  Main.hs  Network.hs  Test.hs  Train.hs
src/AI/: NeuralNet.hs
src/Data/: Mnist.hs
