name:                DigitGrep
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/alxdb/DigitGrep
license:             MIT
license-file:        LICENSE
author:              Alexander Davidson Bryan
maintainer:          alex.davidsonbryan@gmail.com
copyright:           2018 Alexander Davidson Bryan
category:            Data
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable DigitGrep-Train
  hs-source-dirs:      src
  main-is:             Train.hs
  other-modules:       Network,
                       LAUtils
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       mnist-idx,
                       random,
                       vector

executable DigitGrep-Test
  hs-source-dirs:      src
  main-is:             Test.hs
  other-modules:       Network,
                       LAUtils
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       mnist-idx,
                       random,
                       vector
