name:                Mnist
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/alxdb/HaskellMnist
license:             MIT
author:              Alexander Davidson Bryan
maintainer:          alex.davidsonbryan@gmail.com
copyright:           2018 Alexander Davidson Bryan
category:            AI
build-type:          Simple
cabal-version:       >=1.10

executable TrainMnist
  hs-source-dirs:      src
  main-is:             Train.hs
  other-modules:       Network,
                       LAUtils
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       mnist-idx,
                       random,
                       vector

executable TestMnist
  hs-source-dirs:      src
  main-is:             Test.hs
  other-modules:       Network,
                       LAUtils
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       mnist-idx,
                       random,
                       vector
