name: mnist
version: 0.1.0.0
-- synopsis:
-- description:
homepage: https://github.com/alxdb/HaskellMnist
license: MIT
author: Alexander Davidson Bryan
maintainer: alex.davidsonbryan@gmail.com
copyright: 2018 Alexander Davidson Bryan
category: AI
build-type: Simple
cabal-version: >=1.8

library 
  hs-source-dirs: src
  exposed-modules: AI.NeuralNet, Data.Mnist
  build-depends: base >= 4.7 && < 5, mnist-idx, random, vector, binary, hmatrix

executable TrainMnist
  hs-source-dirs: app
  main-is: Train.hs
  build-depends: base >= 4.7 && < 5, mnist, hmatrix

executable TestMnist
  hs-source-dirs: app
  main-is: Test.hs
  build-depends: base >= 4.7 && < 5, mnist
